--- a/package.json
+++ b/package.json
@@ -7,12 +7,21 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "dotenv": "^8.1.0",
     "express": "~4.16.0",
+    "express-jwt": "^5.3.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
+    "jwt-simple": "^0.5.1",
+    "moment": "^2.24.0",
     "mongodb": "^3.3.2",
-    "morgan": "~1.9.0"
+    "mongoose": "^5.7.3",
+    "morgan": "~1.9.0",
+    "node-localstorage": "^1.3.1",
+    "nodemon": "^1.19.3"
   }
 }
