--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "dotenv": "^8.1.0",
@@ -22,6 +23,8 @@
     "mongoose": "^5.7.3",
     "morgan": "~1.9.0",
     "node-localstorage": "^1.3.1",
-    "nodemon": "^1.19.3"
+    "nodemon": "^1.19.3",
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0"
   }
 }
