--- a/.env
+++ b/.env
@@ -2,5 +2,6 @@
 NODE_ENV = development
 SECRETKEY = momo1234
 API_URL = mongodb+srv://admin:admin123@cluster0-6phv3.mongodb.net/admin?retryWrites=true&w=majority
-FACEBOOK_APP_ID = 536085350536644
-FACEBOOK_APP_SECRET = 71cabb8f4a2503dc42da34aeb363f02c
+SUBKEY = 142e85de2acd4e44a81d587bcb094269
+FACE_API_DETECTAR = https://westcentralus.api.cognitive.microsoft.com/face/v1.0/detect
+FACE_API_COMPARAR = https://westcentralus.api.cognitive.microsoft.com/face/v1.0/verify
