--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "mongoose": "^5.7.3",
     "morgan": "~1.9.0",
     "node-localstorage": "^1.3.1",
+    "nodemailer": "^6.3.1",
     "nodemon": "^1.19.3",
     "passport": "^0.4.0",
-    "passport-facebook": "^3.0.0"
+    "passport-facebook": "^3.0.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5"
   }
 }
